--- a/én vagyok.html
+++ b/én vagyok.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
+<fej>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-kompatibilis" tartalom="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body style="background-color: green;">
-    <h1 style="color: rgb(0, 3, 1); text-align: center;">László Robi</h1>
+    <cím></title>
+</fej>
+<body style="háttérszín: zöld;">
+    <h1 style="szín: rgb(0, 3, 1); szöveg-igazítás: középen;">Robi László</h1>
     <a href="https://www.youtube.com/watch?v=M5V_IXMewl4">
     <img src="https://raw.githubusercontent.com/Ropppi/kollazs/main/kollazs.png" alt="" width="500px">
-    </a>
-    <h1 style="text-align: center;">Robi vagyok 2006 Március 9-én születtem Miskolcon</h1>
-    <p style="text-align: center;">A barátaim áaltalában Ropinak hívnak ami nagyon tetszik.</p>
-    <p style="text-align: center;">Van két lány testvérem mind a kettő idősebb mint én</p>
-    <p style="font-size: 130%;">Imádom a hüjülést:</p>
-    <img src="gabez.jpg" alt="" width="300px">
-    <p style="font-size: 150%;">Kedvenc játékom</p>
+    </egy>
+    <h1 style="szöveg igazítása: közép;" > Robi vagyok 2006 Március 9-én születtem Miskolcon</h1>
+    <p style="szöveg igazítása: középen;" > A barátaim áaltalában Ropinak hívnak ami nagyon tetszik. </p>
+    <p style="szöveg igazítása: középen;" > Van két lány testvérem mind a kettő idősebb mint én</p>
+    <p style="betűméret: 130%;"> Imádom a hüjülést:</p>
+    <img src="gabez.jpg"alt="" width="300px">
+    <p style="betűméret:150%;">Kedvenc játékom</p>
     <a href="https://www.rockstargames.com/">
-    <img src="GTAOnline.jpg" alt="" width="400px">
-    </a>
+    <img src="GTAOnline.jpg"alt=""width="400px">
+    </egy>
+</test>
 </body>
 </html>
